--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint:check": "prettier --check .",
     "lint:fix": "prettier --write .",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "testw": "jest --watch"
   },
   "author": "",
   "license": "MIT",
