--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Projeto do curso.dev",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev",
+    "dev": "npm run up && next dev",
+    "up": "docker compose -f infra/compose.yaml up -d",
+    "stop": "docker compose -f infra/compose.yaml stop",
+    "down": "docker compose -f infra/compose.yaml down",
     "lint:check": "prettier --check .",
     "lint:fix": "prettier --write .",
     "test": "jest",
