--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "down": "docker compose -f infra/compose.yaml down",
     "lint:check": "prettier --check .",
     "lint:fix": "prettier --write .",
-    "test": "jest",
-    "testw": "jest --watchAll",
+    "test": "jest --runInBand",
+    "testw": "jest --watchAll --runInBand",
     "migrationc": "node-pg-migrate -m infra/migrations create",
     "migrationu": "node-pg-migrate -m infra/migrations --envPath .env.development up"
   },
@@ -19,6 +19,7 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^16.4.4",
+    "dotenv-expand": "^11.0.6",
     "next": "^13.1.6",
     "node-pg-migrate": "^6.2.2",
     "pg": "^8.11.3",
